Revive the sbt plugin (#610)
* Revert "Remove SBT plugin, see #597. (#598)"

This reverts commit 308f393ac71cbb290bc8166c9f82bed59b1f3a17.

* Revert "Don't run scripted tests on travis"

This reverts commit 983b04372b76fd116c1b3767ac78012367412f44.

* Implement sbt plugin as a thin wrapper around CLI.

* Use sbt-buildinfo so that I can use sbt-scalafmt

* Polish sbt pluging and documentation.

* Fix git diff bug.

* Re-enable scoverage plugin to stop flaky tests.

I have no idea why this seems to fix the flaky tests.